Phase2/y.output
Grammar

    0 $accept: prog_start $end

    1 prog_start: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    5 declarations: %empty
    6             | declaration SEMICOLON declarations

    7 declaration: identifiers COLON INTEGER
    8            | identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    9 identifiers: ident
   10            | ident COMMA identifiers

   11 ident: IDENT

   12 statements: %empty
   13           | statement SEMICOLON statements

   14 statement: var ASSIGN expression
   15          | IF bool_exp THEN statements ENDIF
   16          | IF bool_exp THEN statements ELSE statements ENDIF
   17          | WHILE bool_exp BEGINLOOP statements ENDLOOP
   18          | DO BEGINLOOP statements ENDLOOP WHILE bool_exp
   19          | FOR vars ASSIGN NUMBER SEMICOLON bool_exp SEMICOLON vars ASSIGN expression BEGINLOOP statements ENDLOOP
   20          | READ vars
   21          | WRITE vars
   22          | CONTINUE
   23          | RETURN expression

   24 bool_exp: relation_and_exp
   25         | relation_and_exp OR bool_exp

   26 relation_and_exp: relation_exp
   27                 | relation_exp AND relation_and_exp

   28 relation_exp: expression comp expression
   29             | NOT expression comp expression
   30             | TRUE
   31             | NOT TRUE
   32             | FALSE
   33             | NOT FALSE
   34             | L_PAREN bool_exp R_PAREN

   35 comp: EQ
   36     | NEQ
   37     | LT
   38     | GT
   39     | LTE
   40     | GTE

   41 expressions: expression
   42            | expression COMMA expressions

   43 expression: multiplicative_expression
   44           | multiplicative_expression ADD expression
   45           | multiplicative_expression SUB expression

   46 multiplicative_expression: term
   47                          | term MULT multiplicative_expression
   48                          | term DIV multiplicative_expression
   49                          | term MOD multiplicative_expression

   50 term: var
   51     | SUB var
   52     | NUMBER
   53     | SUB NUMBER
   54     | L_PAREN expression R_PAREN
   55     | SUB L_PAREN expression R_PAREN
   56     | ident L_PAREN R_PAREN
   57     | ident L_PAREN expressions R_PAREN

   58 vars: var
   59     | var COMMA vars

   60 var: ident
   61    | ident L_SQUARE_BRACKET expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 4
BEGIN_PARAMS (259) 4
END_PARAMS (260) 4
BEGIN_LOCALS (261) 4
END_LOCALS (262) 4
BEGIN_BODY (263) 4
END_BODY (264) 4
INTEGER (265) 7 8
ARRAY (266) 8
OF (267) 8
IF (268) 15 16
THEN (269) 15 16
ENDIF (270) 15 16
ELSE (271) 16
WHILE (272) 17 18
FOR (273) 19
DO (274) 18
BEGINLOOP (275) 17 18 19
ENDLOOP (276) 17 18 19
CONTINUE (277) 22
READ (278) 20
WRITE (279) 21
TRUE (280) 30 31
FALSE (281) 32 33
SEMICOLON (282) 4 6 13 19
COLON (283) 7 8
COMMA (284) 10 42 59
L_PAREN (285) 34 54 55 56 57
R_PAREN (286) 34 54 55 56 57
L_SQUARE_BRACKET (287) 8 61
R_SQUARE_BRACKET (288) 8 61
ASSIGN (289) 14 19
RETURN (290) 23
IDENT (291) 11
NUMBER (292) 8 19 52 53
OR (293) 25
AND (294) 27
NOT (295) 29 31 33
LT (296) 37
LTE (297) 39
GT (298) 38
GTE (299) 40
EQ (300) 35
NEQ (301) 36
ADD (302) 44
SUB (303) 45 51 53 55
MULT (304) 47
DIV (305) 48
MOD (306) 49


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prog_start (53)
    on left: 1, on right: 0
functions (54)
    on left: 2 3, on right: 1 3
function (55)
    on left: 4, on right: 3
declarations (56)
    on left: 5 6, on right: 4 6
declaration (57)
    on left: 7 8, on right: 6
identifiers (58)
    on left: 9 10, on right: 7 8 10
ident (59)
    on left: 11, on right: 4 9 10 56 57 60 61
statements (60)
    on left: 12 13, on right: 4 13 15 16 17 18 19
statement (61)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 13
bool_exp (62)
    on left: 24 25, on right: 15 16 17 18 19 25 34
relation_and_exp (63)
    on left: 26 27, on right: 24 25 27
relation_exp (64)
    on left: 28 29 30 31 32 33 34, on right: 26 27
comp (65)
    on left: 35 36 37 38 39 40, on right: 28 29
expressions (66)
    on left: 41 42, on right: 42 57
expression (67)
    on left: 43 44 45, on right: 14 19 23 28 29 41 42 44 45 54 55 61
multiplicative_expression (68)
    on left: 46 47 48 49, on right: 43 44 45 47 48 49
term (69)
    on left: 50 51 52 53 54 55 56 57, on right: 46 47 48 49
vars (70)
    on left: 58 59, on right: 19 20 21 59
var (71)
    on left: 60 61, on right: 14 50 51 58 59


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    prog_start  go to state 2
    functions   go to state 3
    function    go to state 4


State 1

    4 function: FUNCTION . ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    ident  go to state 6


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 3

    1 prog_start: functions .

    $default  reduce using rule 1 (prog_start)


State 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 8
    function   go to state 4


State 5

   11 ident: IDENT .

    $default  reduce using rule 11 (ident)


State 6

    4 function: FUNCTION ident . SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    SEMICOLON  shift, and go to state 9


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 9

    4 function: FUNCTION ident SEMICOLON . BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_PARAMS  shift, and go to state 10


State 10

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS . declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 11
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 11

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations . END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    END_PARAMS  shift, and go to state 15


State 12

    6 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 16


State 13

    7 declaration: identifiers . COLON INTEGER
    8            | identifiers . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 17


State 14

    9 identifiers: ident .
   10            | ident . COMMA identifiers

    COMMA  shift, and go to state 18

    $default  reduce using rule 9 (identifiers)


State 15

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY

    BEGIN_LOCALS  shift, and go to state 19


State 16

    6 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 20
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 17

    7 declaration: identifiers COLON . INTEGER
    8            | identifiers COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 21
    ARRAY    shift, and go to state 22


State 18

   10 identifiers: ident COMMA . identifiers

    IDENT  shift, and go to state 5

    identifiers  go to state 23
    ident        go to state 14


State 19

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statements END_BODY

    IDENT  shift, and go to state 5

    $default  reduce using rule 5 (declarations)

    declarations  go to state 24
    declaration   go to state 12
    identifiers   go to state 13
    ident         go to state 14


State 20

    6 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 6 (declarations)


State 21

    7 declaration: identifiers COLON INTEGER .

    $default  reduce using rule 7 (declaration)


State 22

    8 declaration: identifiers COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 25


State 23

   10 identifiers: ident COMMA identifiers .

    $default  reduce using rule 10 (identifiers)


State 24

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statements END_BODY

    END_LOCALS  shift, and go to state 26


State 25

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 27


State 26

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statements END_BODY

    BEGIN_BODY  shift, and go to state 28


State 27

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 29


State 28

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statements END_BODY

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    FOR       shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 5

    $default  reduce using rule 12 (statements)

    ident       go to state 38
    statements  go to state 39
    statement   go to state 40
    var         go to state 41


State 29

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 42


State 30

   15 statement: IF . bool_exp THEN statements ENDIF
   16          | IF . bool_exp THEN statements ELSE statements ENDIF

    TRUE     shift, and go to state 43
    FALSE    shift, and go to state 44
    L_PAREN  shift, and go to state 45
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    NOT      shift, and go to state 47
    SUB      shift, and go to state 48

    ident                      go to state 49
    bool_exp                   go to state 50
    relation_and_exp           go to state 51
    relation_exp               go to state 52
    expression                 go to state 53
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 31

   17 statement: WHILE . bool_exp BEGINLOOP statements ENDLOOP

    TRUE     shift, and go to state 43
    FALSE    shift, and go to state 44
    L_PAREN  shift, and go to state 45
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    NOT      shift, and go to state 47
    SUB      shift, and go to state 48

    ident                      go to state 49
    bool_exp                   go to state 57
    relation_and_exp           go to state 51
    relation_exp               go to state 52
    expression                 go to state 53
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 32

   19 statement: FOR . vars ASSIGN NUMBER SEMICOLON bool_exp SEMICOLON vars ASSIGN expression BEGINLOOP statements ENDLOOP

    IDENT  shift, and go to state 5

    ident  go to state 38
    vars   go to state 58
    var    go to state 59


State 33

   18 statement: DO . BEGINLOOP statements ENDLOOP WHILE bool_exp

    BEGINLOOP  shift, and go to state 60


State 34

   22 statement: CONTINUE .

    $default  reduce using rule 22 (statement)


State 35

   20 statement: READ . vars

    IDENT  shift, and go to state 5

    ident  go to state 38
    vars   go to state 61
    var    go to state 59


State 36

   21 statement: WRITE . vars

    IDENT  shift, and go to state 5

    ident  go to state 38
    vars   go to state 62
    var    go to state 59


State 37

   23 statement: RETURN . expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 64
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 38

   60 var: ident .
   61    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 65

    $default  reduce using rule 60 (var)


State 39

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements . END_BODY

    END_BODY  shift, and go to state 66


State 40

   13 statements: statement . SEMICOLON statements

    SEMICOLON  shift, and go to state 67


State 41

   14 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 68


State 42

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 69


State 43

   30 relation_exp: TRUE .

    $default  reduce using rule 30 (relation_exp)


State 44

   32 relation_exp: FALSE .

    $default  reduce using rule 32 (relation_exp)


State 45

   34 relation_exp: L_PAREN . bool_exp R_PAREN
   54 term: L_PAREN . expression R_PAREN

    TRUE     shift, and go to state 43
    FALSE    shift, and go to state 44
    L_PAREN  shift, and go to state 45
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    NOT      shift, and go to state 47
    SUB      shift, and go to state 48

    ident                      go to state 49
    bool_exp                   go to state 70
    relation_and_exp           go to state 51
    relation_exp               go to state 52
    expression                 go to state 71
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 46

   52 term: NUMBER .

    $default  reduce using rule 52 (term)


State 47

   29 relation_exp: NOT . expression comp expression
   31             | NOT . TRUE
   33             | NOT . FALSE

    TRUE     shift, and go to state 72
    FALSE    shift, and go to state 73
    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 74
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 48

   51 term: SUB . var
   53     | SUB . NUMBER
   55     | SUB . L_PAREN expression R_PAREN

    L_PAREN  shift, and go to state 75
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 76

    ident  go to state 38
    var    go to state 77


State 49

   56 term: ident . L_PAREN R_PAREN
   57     | ident . L_PAREN expressions R_PAREN
   60 var: ident .
   61    | ident . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 78
    L_SQUARE_BRACKET  shift, and go to state 65

    $default  reduce using rule 60 (var)


State 50

   15 statement: IF bool_exp . THEN statements ENDIF
   16          | IF bool_exp . THEN statements ELSE statements ENDIF

    THEN  shift, and go to state 79


State 51

   24 bool_exp: relation_and_exp .
   25         | relation_and_exp . OR bool_exp

    OR  shift, and go to state 80

    $default  reduce using rule 24 (bool_exp)


State 52

   26 relation_and_exp: relation_exp .
   27                 | relation_exp . AND relation_and_exp

    AND  shift, and go to state 81

    $default  reduce using rule 26 (relation_and_exp)


State 53

   28 relation_exp: expression . comp expression

    LT   shift, and go to state 82
    LTE  shift, and go to state 83
    GT   shift, and go to state 84
    GTE  shift, and go to state 85
    EQ   shift, and go to state 86
    NEQ  shift, and go to state 87

    comp  go to state 88


State 54

   43 expression: multiplicative_expression .
   44           | multiplicative_expression . ADD expression
   45           | multiplicative_expression . SUB expression

    ADD  shift, and go to state 89
    SUB  shift, and go to state 90

    $default  reduce using rule 43 (expression)


State 55

   46 multiplicative_expression: term .
   47                          | term . MULT multiplicative_expression
   48                          | term . DIV multiplicative_expression
   49                          | term . MOD multiplicative_expression

    MULT  shift, and go to state 91
    DIV   shift, and go to state 92
    MOD   shift, and go to state 93

    $default  reduce using rule 46 (multiplicative_expression)


State 56

   50 term: var .

    $default  reduce using rule 50 (term)


State 57

   17 statement: WHILE bool_exp . BEGINLOOP statements ENDLOOP

    BEGINLOOP  shift, and go to state 94


State 58

   19 statement: FOR vars . ASSIGN NUMBER SEMICOLON bool_exp SEMICOLON vars ASSIGN expression BEGINLOOP statements ENDLOOP

    ASSIGN  shift, and go to state 95


State 59

   58 vars: var .
   59     | var . COMMA vars

    COMMA  shift, and go to state 96

    $default  reduce using rule 58 (vars)


State 60

   18 statement: DO BEGINLOOP . statements ENDLOOP WHILE bool_exp

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    FOR       shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 5

    $default  reduce using rule 12 (statements)

    ident       go to state 38
    statements  go to state 97
    statement   go to state 40
    var         go to state 41


State 61

   20 statement: READ vars .

    $default  reduce using rule 20 (statement)


State 62

   21 statement: WRITE vars .

    $default  reduce using rule 21 (statement)


State 63

   54 term: L_PAREN . expression R_PAREN

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 98
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 64

   23 statement: RETURN expression .

    $default  reduce using rule 23 (statement)


State 65

   61 var: ident L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 99
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 66

    4 function: FUNCTION ident SEMICOLON BEGIN_PARAMS declarations END_PARAMS BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statements END_BODY .

    $default  reduce using rule 4 (function)


State 67

   13 statements: statement SEMICOLON . statements

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    FOR       shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 5

    $default  reduce using rule 12 (statements)

    ident       go to state 38
    statements  go to state 100
    statement   go to state 40
    var         go to state 41


State 68

   14 statement: var ASSIGN . expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 101
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 69

    8 declaration: identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 8 (declaration)


State 70

   34 relation_exp: L_PAREN bool_exp . R_PAREN

    R_PAREN  shift, and go to state 102


State 71

   28 relation_exp: expression . comp expression
   54 term: L_PAREN expression . R_PAREN

    R_PAREN  shift, and go to state 103
    LT       shift, and go to state 82
    LTE      shift, and go to state 83
    GT       shift, and go to state 84
    GTE      shift, and go to state 85
    EQ       shift, and go to state 86
    NEQ      shift, and go to state 87

    comp  go to state 88


State 72

   31 relation_exp: NOT TRUE .

    $default  reduce using rule 31 (relation_exp)


State 73

   33 relation_exp: NOT FALSE .

    $default  reduce using rule 33 (relation_exp)


State 74

   29 relation_exp: NOT expression . comp expression

    LT   shift, and go to state 82
    LTE  shift, and go to state 83
    GT   shift, and go to state 84
    GTE  shift, and go to state 85
    EQ   shift, and go to state 86
    NEQ  shift, and go to state 87

    comp  go to state 104


State 75

   55 term: SUB L_PAREN . expression R_PAREN

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 105
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 76

   53 term: SUB NUMBER .

    $default  reduce using rule 53 (term)


State 77

   51 term: SUB var .

    $default  reduce using rule 51 (term)


State 78

   56 term: ident L_PAREN . R_PAREN
   57     | ident L_PAREN . expressions R_PAREN

    L_PAREN  shift, and go to state 63
    R_PAREN  shift, and go to state 106
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expressions                go to state 107
    expression                 go to state 108
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 79

   15 statement: IF bool_exp THEN . statements ENDIF
   16          | IF bool_exp THEN . statements ELSE statements ENDIF

    IF        shift, and go to state 30
    WHILE     shift, and go to state 31
    FOR       shift, and go to state 32
    DO        shift, and go to state 33
    CONTINUE  shift, and go to state 34
    READ      shift, and go to state 35
    WRITE     shift, and go to state 36
    RETURN    shift, and go to state 37
    IDENT     shift, and go to state 5

    $default  reduce using rule 12 (statements)

    ident       go to state 38
    statements  go to state 109
    statement   go to state 40
    var         go to state 41


State 80

   25 bool_exp: relation_and_exp OR . bool_exp

    TRUE     shift, and go to state 43
    FALSE    shift, and go to state 44
    L_PAREN  shift, and go to state 45
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    NOT      shift, and go to state 47
    SUB      shift, and go to state 48

    ident                      go to state 49
    bool_exp                   go to state 110
    relation_and_exp           go to state 51
    relation_exp               go to state 52
    expression                 go to state 53
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 81

   27 relation_and_exp: relation_exp AND . relation_and_exp

    TRUE     shift, and go to state 43
    FALSE    shift, and go to state 44
    L_PAREN  shift, and go to state 45
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    NOT      shift, and go to state 47
    SUB      shift, and go to state 48

    ident                      go to state 49
    relation_and_exp           go to state 111
    relation_exp               go to state 52
    expression                 go to state 53
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 82

   37 comp: LT .

    $default  reduce using rule 37 (comp)


State 83

   39 comp: LTE .

    $default  reduce using rule 39 (comp)


State 84

   38 comp: GT .

    $default  reduce using rule 38 (comp)


State 85

   40 comp: GTE .

    $default  reduce using rule 40 (comp)


State 86

   35 comp: EQ .

    $default  reduce using rule 35 (comp)


State 87

   36 comp: NEQ .

    $default  reduce using rule 36 (comp)


State 88

   28 relation_exp: expression comp . expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 112
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 89

   44 expression: multiplicative_expression ADD . expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 113
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 90

   45 expression: multiplicative_expression SUB . expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    expression                 go to state 114
    multiplicative_expression  go to state 54
    term                       go to state 55
    var                        go to state 56


State 91

   47 multiplicative_expression: term MULT . multiplicative_expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    multiplicative_expression  go to state 115
    term                       go to state 55
    var                        go to state 56


State 92

   48 multiplicative_expression: term DIV . multiplicative_expression

    L_PAREN  shift, and go to state 63
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 46
    SUB      shift, and go to state 48

    ident                      go to state 49
    multiplicative_expression  go to state 116
    term                       go to state 55
    var                        go to state 56


State 93

   49 multiplicative_expression: term MOD . multiplicative_expression
